# llm_mini

./: .gitignore  LICENSE  README.md
data/: train.txt  val.txt
env_project/: README.md  pyproject.toml
scripts/: data_process.py
src/: train_llm.py
